force-app/main/default/objects/Department__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Head</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>