force-app/main/default/objects/Department__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <defaultValue>&quot;Long Island City, NY 11101&quot;</defaultValue>
    <label>Primary Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>